split the data managers in 2

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ build/build_*.sh
 
 #template with data managers entries
 genomes/*.yaml
-!genomes/data_managers.yaml
+!genomes/data_managers_genome_based.yaml
+!genomes/data_managers_transcriptome_based.yaml
